// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`invalid > array > of an array of an array of a union 1`] = `
[
  Symbol(invalidValue),
  [
    Symbol(invalidValue),
  ],
  [
    [
      Symbol(invalidValue),
    ],
  ],
  [
    [
      [
        Symbol(invalidValue),
      ],
    ],
  ],
  [
    [
      [
        Symbol(invalidValue),
      ],
    ],
  ],
]
`;

exports[`invalid > array > of an array of an array of a value 1`] = `
[
  Symbol(invalidValue),
  [
    Symbol(invalidValue),
  ],
  [
    [
      Symbol(invalidValue),
    ],
  ],
  [
    [
      [
        Symbol(invalidValue),
      ],
    ],
  ],
]
`;

exports[`invalid > array > single value 1`] = `
[
  Symbol(invalidValue),
  [
    Symbol(invalidValue),
  ],
]
`;

exports[`invalid > object > empty 1`] = `
[
  Symbol(invalidValue),
]
`;

exports[`invalid > object > of a several value properties 1`] = `
[
  Symbol(invalidValue),
  {
    "b": "B",
    "c": "C",
  },
  {
    "a": Symbol(invalidValue),
    "b": "B",
    "c": "C",
  },
  {
    "a": "A",
    "c": "C",
  },
  {
    "a": "A",
    "b": Symbol(invalidValue),
    "c": "C",
  },
  {
    "a": "A",
    "b": "B",
  },
  {
    "a": "A",
    "b": "B",
    "c": Symbol(invalidValue),
  },
]
`;

exports[`invalid > object > of a single union property 1`] = `
[
  Symbol(invalidValue),
  {},
  {
    "a": Symbol(invalidValue),
  },
  {
    "a": Symbol(invalidValue),
  },
]
`;

exports[`invalid > object > of a single value property 1`] = `
[
  Symbol(invalidValue),
  {},
  {
    "a": Symbol(invalidValue),
  },
]
`;

exports[`invalid > union > couple of values 1`] = `
[
  Symbol(invalidValue),
  Symbol(invalidValue),
  Symbol(invalidValue),
]
`;

exports[`invalid > union > single value 1`] = `
[
  Symbol(invalidValue),
]
`;

exports[`invalid > value > number 1`] = `
[
  Symbol(invalidValue),
]
`;

exports[`valid > all at once 1`] = `
[
  {
    "a": 1,
    "b": true,
    "c": [
      "a",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": true,
    "c": [
      "a",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 1,
    "b": true,
    "c": [
      "b",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": true,
    "c": [
      "b",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [
      "a",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [
      "a",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [
      "b",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 1,
    "b": false,
    "c": [
      "b",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "a",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "a",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "b",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": true,
    "c": [
      "b",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "a",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "a",
    ],
    "d": {
      "d2": undefined,
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "b",
    ],
    "d": {
      "d2": null,
    },
  },
  {
    "a": 2,
    "b": false,
    "c": [
      "b",
    ],
    "d": {
      "d2": undefined,
    },
  },
]
`;

exports[`valid > array > of a single value 1`] = `
[
  [
    1,
  ],
]
`;

exports[`valid > array > of a union 1`] = `
[
  [
    1,
  ],
  [
    2,
  ],
]
`;

exports[`valid > array > of an array of an array of a union 1`] = `
[
  [
    [
      [
        1,
      ],
    ],
  ],
  [
    [
      [
        2,
      ],
    ],
  ],
]
`;

exports[`valid > array > of an array of an array of a value 1`] = `
[
  [
    [
      [
        1,
      ],
    ],
  ],
]
`;

exports[`valid > object > empty 1`] = `
[
  {},
]
`;

exports[`valid > object > of a several nested objects with a union property 1`] = `
[
  {
    "a": {
      "b": {
        "c": {
          "d": "D1",
        },
      },
    },
  },
  {
    "a": {
      "b": {
        "c": {
          "d": "D2",
        },
      },
    },
  },
]
`;

exports[`valid > object > of a several nested objects with a value property 1`] = `
[
  {
    "a": {
      "b": {
        "c": {
          "d": "D",
        },
      },
    },
  },
]
`;

exports[`valid > object > of a several objects with union properties 1`] = `
[
  {
    "a": {
      "aa": "AA1",
    },
    "b": {
      "bb": "BB1",
    },
    "c": {
      "cc": "CC1",
    },
  },
  {
    "a": {
      "aa": "AA1",
    },
    "b": {
      "bb": "BB1",
    },
    "c": {
      "cc": "CC2",
    },
  },
  {
    "a": {
      "aa": "AA1",
    },
    "b": {
      "bb": "BB2",
    },
    "c": {
      "cc": "CC1",
    },
  },
  {
    "a": {
      "aa": "AA1",
    },
    "b": {
      "bb": "BB2",
    },
    "c": {
      "cc": "CC2",
    },
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": {
      "bb": "BB1",
    },
    "c": {
      "cc": "CC1",
    },
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": {
      "bb": "BB1",
    },
    "c": {
      "cc": "CC2",
    },
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": {
      "bb": "BB2",
    },
    "c": {
      "cc": "CC1",
    },
  },
  {
    "a": {
      "aa": "AA2",
    },
    "b": {
      "bb": "BB2",
    },
    "c": {
      "cc": "CC2",
    },
  },
]
`;

exports[`valid > object > of a several objects with value properties 1`] = `
[
  {
    "a": {
      "a1": "A1",
      "a2": "A2",
    },
    "b": {
      "b1": "B1",
      "b2": "B2",
    },
    "c": {
      "c1": "C1",
      "c2": "C2",
    },
  },
]
`;

exports[`valid > object > of a several union properties 1`] = `
[
  {
    "a": "A1",
    "b": "B1",
    "c": "C1",
  },
  {
    "a": "A1",
    "b": "B1",
    "c": "C2",
  },
  {
    "a": "A1",
    "b": "B1",
    "c": "C3",
  },
  {
    "a": "A1",
    "b": "B2",
    "c": "C1",
  },
  {
    "a": "A1",
    "b": "B2",
    "c": "C2",
  },
  {
    "a": "A1",
    "b": "B2",
    "c": "C3",
  },
]
`;

exports[`valid > object > of a several value properties 1`] = `
[
  {
    "a": "A",
    "b": "B",
    "c": "C",
  },
]
`;

exports[`valid > object > of a single union property 1`] = `
[
  {
    "a": "A1",
  },
  {
    "a": "A2",
  },
]
`;

exports[`valid > object > of a single value property 1`] = `
[
  {
    "a": "A",
  },
]
`;

exports[`valid > union > of a single value 1`] = `
[
  1,
]
`;

exports[`valid > union > of a union 1`] = `
[
  1,
  2,
  3,
]
`;

exports[`valid > union > of several values 1`] = `
[
  1,
  2,
  3,
]
`;

exports[`valid > union > of unions 1`] = `
[
  1,
  2,
  3,
  4,
]
`;

exports[`valid > value > null 1`] = `
[
  null,
]
`;

exports[`valid > value > number 1`] = `
[
  1,
]
`;

exports[`valid > value > string 1`] = `
[
  "a",
]
`;
